--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
     <base href="/">
     <title>Cloud</title>
 
-    <link rel="stylesheet" href="www/lib/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="www/lib/codemirror/lib/codemirror.css">
-    <link rel="stylesheet" href="www/lib/codemirror/theme/monokai.css">
-    <link rel="stylesheet" href="www/style.css">
+    <link rel="stylesheet" href="briscloud/www/lib/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="briscloud/www/lib/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="briscloud/www/lib/codemirror/theme/monokai.css">
+    <link rel="stylesheet" href="briscloud/www/style.css">
 
-    <script src="www/lib/jquery/dist/jquery.min.js"></script>
-    <script src="www/lib/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="www/lib/angular/angular.js"></script>
-    <script src="www/lib/angular-route/angular-route.js"></script>
-    <script src="www/angular/app.js"></script>
+    <script src="briscloud/www/lib/jquery/dist/jquery.min.js"></script>
+    <script src="briscloud/www/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="briscloud/www/lib/angular/angular.js"></script>
+    <script src="briscloud/www/lib/angular-route/angular-route.js"></script>
+    <script src="briscloud/www/angular/app.js"></script>
     <!-- controllers -->
-    <script src="www/angular/controllers/client_controller.js"></script>
+    <script src="briscloud/www/angular/controllers/client_controller.js"></script>
     <!-- directives -->
-    <script src="www/angular/directives/code_input_directive.js"></script>
+    <script src="briscloud/www/angular/directives/code_input_directive.js"></script>
     <!-- codemirror -->
-    <script src="www/lib/codemirror/lib/codemirror.js"></script>
-    <script src="www/lib/codemirror/addon/edit/matchbrackets.js"></script>
-    <script src="www/lib/codemirror/addon/edit/closebrackets.js"></script>
-    <script src="www/lib/codemirror/addon/comment/comment.js"></script>
-    <script src="www/lib/codemirror/addon/comment/continuecomment.js"></script>
-    <script src="www/lib/codemirror/keymap/sublime.js"></script>
-    <script src="www/lib/codemirror/addon/search/searchcursor.js"></script>
+    <script src="briscloud/www/lib/codemirror/lib/codemirror.js"></script>
+    <script src="briscloud/www/lib/codemirror/addon/edit/matchbrackets.js"></script>
+    <script src="briscloud/www/lib/codemirror/addon/edit/closebrackets.js"></script>
+    <script src="briscloud/www/lib/codemirror/addon/comment/comment.js"></script>
+    <script src="briscloud/www/lib/codemirror/addon/comment/continuecomment.js"></script>
+    <script src="briscloud/www/lib/codemirror/keymap/sublime.js"></script>
+    <script src="briscloud/www/lib/codemirror/addon/search/searchcursor.js"></script>
 
       <!-- languages  -->
-      <script src="www/lib/codemirror/mode/python/python.js"></script>
-      <script src="www/lib/codemirror/mode/clike/clike.js"></script>
-      <script src="www/lib/codemirror/mode/ruby/ruby.js"></script>
+      <script src="briscloud/www/lib/codemirror/mode/python/python.js"></script>
+      <script src="briscloud/www/lib/codemirror/mode/clike/clike.js"></script>
+      <script src="briscloud/www/lib/codemirror/mode/ruby/ruby.js"></script>
   </head>
 
   <body >
